--- a/webpack_dome/public/index.html
+++ b/webpack_dome/public/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <div id="container"></div>
+  <script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=IHkpqWPrVexItnG1WweaPh9utTIiRMsH"></script>
 </body>
+
 </html>
